--- a/src/main/webapp/optimizer/optimizer.html
+++ b/src/main/webapp/optimizer/optimizer.html
@@ -12,6 +12,8 @@
                             <div class="card">
                                 <div class="card-body p-2">
                                     <span class="badge badge-pill float-right"
+                                          style="cursor: pointer;"
+                                          ui-sref="optimizer.query"
                                           ng-class="section == 'query' ? 'badge-primary': 'badge-secondary'">1</span>
                                     <h6>Input SQL Query</h6>
                                     <div class="text-muted text-secondary">Show us the query to analyze</div>
@@ -31,7 +33,8 @@
                         <div class="col-4 p-0">
                             <div class="card">
                                 <div class="card-body p-2">
-                                    <span class="badge badge-pill badge-secondary float-right">3</span>
+                                    <span class="badge badge-pill badge-secondary float-right"
+                                          ng-class="section == 'statistics' ? 'badge-primary': 'badge-secondary'">3</span>
                                     <h6>Performance Statistics</h6>
                                     <div class="text-muted text-secondary">Learn how to boost your query</div>
                                 </div>
@@ -40,17 +43,17 @@
                     </div>
 
                     <br>
-                    <p class="card-text text-center">Please provide an SQL query you would like to optimize.</p>
                     <div class="form-group">
-                        <label>SQL Query</label>
                         <div ui-view="optimizer"></div>
                     </div>
                 </div>
                 <div class="card-footer">
                     <button ng-if="section == 'query'" ui-sref="optimizer.schema" class="btn btn-sm btn-primary pull-right">Done with SQL Query</button>
 
-                    <button ng-if="section == 'schema'" class="btn btn-sm btn-primary pull-right">Done with Schema Structure</button>
                     <button ng-if="section == 'schema'" ui-sref="optimizer.query" class="btn btn-sm btn-secondary pull-left">Go Back</button>
+                    <button ng-if="section == 'schema'" ui-sref="optimizer.statistics" class="btn btn-sm btn-primary pull-right">Done with Schema Structure</button>
+
+                    <button ng-if="section == 'statistics'" ui-sref="optimizer.schema" class="btn btn-sm btn-secondary pull-left">Go Back</button>
                 </div>
             </div>
         </div>
