--- a/src/main/webapp/optimizer/query.html
+++ b/src/main/webapp/optimizer/query.html
@@ -1,7 +1,10 @@
+<p class="card-text text-center">Please provide an SQL query you would like to optimize.</p>
+<br>
+<label>SQL Query</label>
 <section>
     <div ui-ace="{
       theme:'chrome',
       mode: 'sql'
-    }" >SELECT * FROM columns WHERE table_schema = 'information_schema'</div>
+    }" ng-model="query"></div>
 
 </section>
