Add stub for recommendation functionality

--- a/src/main/webapp/optimizer/optimizer.html
+++ b/src/main/webapp/optimizer/optimizer.html
@@ -51,7 +51,7 @@
                     <button ng-if="section == 'query'" ui-sref="optimizer.schema" class="btn btn-sm btn-primary pull-right">Done with SQL Query</button>
 
                     <button ng-if="section == 'schema'" ui-sref="optimizer.query" class="btn btn-sm btn-secondary pull-left">Go Back</button>
-                    <button ng-if="section == 'schema'" ui-sref="optimizer.statistics" class="btn btn-sm btn-primary pull-right">Done with Schema Structure</button>
+                    <button ng-if="section == 'schema'" ui-sref="recommendations" class="btn btn-sm btn-primary pull-right">Done with Schema Structure</button>
 
                     <button ng-if="section == 'statistics'" ui-sref="optimizer.schema" class="btn btn-sm btn-secondary pull-left">Go Back</button>
                 </div>
