Add Asterisk and Index recommendations, Add Asterisk Tip

--- a/src/main/webapp/recommendations/recommendations.html
+++ b/src/main/webapp/recommendations/recommendations.html
@@ -14,5 +14,14 @@
                 </div>
             </div>
         </div>
+
+        <br>
+
+        <div class="row">
+            <div ng-repeat="tip in tips" class="col-6">
+                <tip tip="tip"></tip>
+            </div>
+        </div>
+
     </div>
 </div>
