--- a/src/main/webapp/optimizer/query.html
+++ b/src/main/webapp/optimizer/query.html
@@ -5,6 +5,7 @@
     <div ui-ace="{
       theme:'chrome',
       mode: 'sql',
+      onChange: queryChanged,
       advanced: {
         fontSize: '15px'
       }
