Correct templates for INDEX tips

--- a/src/main/webapp/optimizer/query.html
+++ b/src/main/webapp/optimizer/query.html
@@ -3,7 +3,7 @@
 <label>SQL Query</label>
 <section style="border: 1px solid #ccc;">
     <div ui-ace="{
-      theme:'chrome',
+      theme:'sqlserver',
       mode: 'sql',
       onChange: queryChanged,
       advanced: {
