--- a/src/main/webapp/optimizer/schema.html
+++ b/src/main/webapp/optimizer/schema.html
@@ -3,7 +3,7 @@
 <label>Database Schema</label>
 <section style="border: 1px solid #ccc;">
     <div ui-ace="{
-      theme:'chrome',
+      theme:'sqlserver',
       mode: 'sql',
       onChange: schemaChanged,
       advanced: {
