--- a/src/main/webapp/tip/tip.html
+++ b/src/main/webapp/tip/tip.html
@@ -3,26 +3,35 @@
         <h5 class="card-title">{{tip.title}}</h5>
         <p class="card-text">{{tip.description}}</p>
 
-        <div ng-if="tip.bestPractice">
+        <div class="mt-3 mb-3" ng-if="tip.bestPractice">
             <span class="text-success">Best practice example:</span>
             <div style="height: 50px; border: 1px dashed #ccc;" ui-ace="{
-              theme:'chrome',
+              theme:'sqlserver',
               mode: 'sql',
               advanced: {
                 fontSize: '15px'
               }
             }" ng-model="tip.bestPractice"></div>
         </div>
-        <br>
-        <div ng-if="tip.badPractice">
+        <div class="mb-3" ng-if="tip.badPractice">
             <span class="text-danger">Bed practice example:</span>
             <div style="height: 50px; border: 1px dashed #ccc;" ui-ace="{
-              theme:'chrome',
+              theme:'sqlserver',
               mode: 'sql',
               advanced: {
                 fontSize: '15px'
               }
             }" ng-model="tip.badPractice"></div>
+        </div>
+        <div class="mb-3" ng-if="tip.sql">
+            <span class="text-primary">Suggestions:</span>
+            <div style="height: 100px; border: 1px dashed #ccc;" ui-ace="{
+              theme:'sqlserver',
+              mode: 'sql',
+              advanced: {
+                fontSize: '15px'
+              }
+            }" ng-model="tip.sql"></div>
         </div>
     </div>
 </div>
